if2/stdout.txt
Checking test execution result...
[!] Test execution result: FAILED
Checking source code format...
  Preparing source code for format check...
  Running format check...
// =====================================================
//  Running cargo fmt...
// =====================================================

// =====================================================
//    Running cargo clippy...
// =====================================================

    Checking format_check v0.1.0 (/home/runner/work/rustlings-wakaise/rustlings-wakaise/format_check)
error[E0308]: mismatched types
  --> src/lib.rs:14:9
   |
10 | pub fn foo_if_fizz(fizzish: &str) -> &str {
   |                                      ---- expected `&str` because of return type
...
14 |         1
   |         ^ expected `&str`, found integer

For more information about this error, try `rustc --explain E0308`.
error: could not compile `format_check` (lib) due to 1 previous error

[!] Source code format check: FAILED
